--- a/index.html
+++ b/index.html
@@ -282,9 +282,12 @@
     <!-- About Us Contact Blog Careers Support Privacy Policy Request Invite ©
     Easybank. All Rights Reserved -->
 
-    <div class="attribution">
+    <div class="attribution" role="complementary">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noreferrer"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
